[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://v2/ui/LabeledSlider/LabeledSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/AudioSettings/AudioSettings.gd" type="Script" id=3]
[ext_resource path="res://sfx/hit_strong_2.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/ready.wav" type="AudioStream" id=5]
[ext_resource path="res://textures/chill.png" type="Texture" id=7]

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 4 )
random_pitch = 1.2

[node name="AudioMenu" type="Control" groups=[
"save",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -323.033, -70.311 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoiceTest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Voice"

[node name="SoundFXTest" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
bus = "SFX"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.243137, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BlockyTex" type="TextureRect" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 141.806
margin_top = 115.966
margin_right = -40.1941
margin_bottom = -2.0343
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 12.845
margin_top = 8.71838
margin_right = 82.845
margin_bottom = 30.7184
theme = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
text = "Audio"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioContainer" type="VBoxContainer" parent="."]
anchor_left = 0.041
anchor_top = 0.216
anchor_right = 0.631
anchor_bottom = 0.649
margin_left = -0.120001
margin_top = 0.0719986
margin_right = 0.0799866
margin_bottom = 0.00799561
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="AudioContainer"]
margin_right = 188.0
margin_bottom = 9.0
theme = ExtResource( 1 )
text = "Music"

[node name="MusicSlider" parent="AudioContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 13.0
margin_right = 188.0
margin_bottom = 23.0

[node name="VoiceLabel" type="Label" parent="AudioContainer"]
margin_top = 27.0
margin_right = 188.0
margin_bottom = 36.0
theme = ExtResource( 1 )
text = "Voice"

[node name="VoiceSlider" parent="AudioContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 188.0
margin_bottom = 50.0

[node name="SoundFXLabel" type="Label" parent="AudioContainer"]
margin_top = 54.0
margin_right = 188.0
margin_bottom = 63.0
theme = ExtResource( 1 )
text = "Sound Effects"

[node name="SoundFXSlider" parent="AudioContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 67.0
margin_right = 188.0
margin_bottom = 77.0

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.816
anchor_top = 0.865
anchor_right = 0.974
anchor_bottom = 0.964
margin_left = -0.120026
margin_top = 0.0799866
margin_right = 0.319977
margin_bottom = 0.487991
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="AudioContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="AudioContainer/VoiceSlider" to="." method="_on_VoiceSlider_value_changed"]
[connection signal="value_changed" from="AudioContainer/SoundFXSlider" to="." method="_on_SoundFXSlider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
